# twitter-content-machine

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: cli-flags-and-pipeline-ru.md  cli_descripsion_russion.md  cli_flex_npplan_ru.md  identity-style-telegram-mvp.md  llm-context-bundle-x-read-pr.md  product-roadmap-scoring.md  product-roadmap.md  style-learning-from-posts-backlog.md
docs/algorithm-aware/: ideas-and-backlog.md
tests/: conftest.py  test_active_draft_cli.py  test_algorithm_review.py  test_codex_sessions.py  test_core_workflow.py  test_drafting_workflow.py  test_graph_bootstrap_agent.py  test_identity_style.py  test_llm_codex.py  test_memory_x_mcp.py  test_outcomes.py  test_output_protocol.py  test_workspace_cli.py  test_workspace_context.py  test_workspace_runs.py  test_workspace_service.py  test_workspace_sessions.py  test_workspace_tui.py
twitter_content_machine/: __init__.py  algorithm_artifacts.py  algorithm_review.py  algorithm_scoring.py  algorithm_terms.py  article.py  bootstrap.py  cli.py  cli_commands.py  codex_session.py  config.py  context_bundle.py  db.py  distribution_plan.py  draft_artifacts.py  draft_fallbacks.py  draft_status.py  drafting.py  editing.py  format_decision.py  generation_workspace.py  identity_artifacts.py  identity_auto_select.py  identity_context.py  identity_learning.py  identity_style.py  llm.py  llm_parsing.py  mcp_server.py  media_plan.py  models.py  outcomes.py  output_protocol.py  project_context.py  review.py  runs.py  security.py  sessions.py  smart_search.py  state.py  (+12 more)
(+31 files in other folders)
